this is the code after the update of rasha

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html,
+body {
+    padding: 0 !important;
+    margin: 0 !important;
+    min-height: 100vh;
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
