--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
